fixed z-index

--- a/css/css.css
+++ b/css/css.css
@@ -14,6 +14,7 @@ ul.topnav {
   padding: 0;
   overflow: ;
   background-color: #333;
+  z-index: 100;
 }
 
 .topspacer {
